<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">
    <TextView
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/error_msg"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/error_msg2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/retryBtn"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>