<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bitcoin (BTC) "
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textColor="@color/white"
                android:text="24%"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>


        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6741 $"
            android:textColor="@color/white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/t2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/ticker3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/t3"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/ticker4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/t4"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5111 $"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/cap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="5111 $"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="5111 $"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="5111 $"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_hour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_hour"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/h1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#b2b2b2"
                android:textStyle="bold" />

            <View
                android:id="@+id/div_hour"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/d1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#b2b2b2"
                android:textStyle="bold" />

            <View
                android:id="@+id/div_day"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/m1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#b2b2b2"
                android:textStyle="bold" />

            <View
                android:id="@+id/div_month"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_quarter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_quarter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/q1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#b2b2b2"
                android:textStyle="bold" />

            <View
                android:id="@+id/div_quarter"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/y1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#BEE86E"
                android:textStyle="bold" />

            <View
                android:id="@+id/div_year"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#BEE86E" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.github.mikephil.charting.charts.LineChart
            android:visibility="gone"
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <com.github.ybq.android.spinkit.SpinKitView
            android:padding="10dp"
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.Large.Wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="#BEE86E" />
        <TextView
            android:padding="10dp"
            android:visibility="gone"
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/error_msg"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#BEE86E"
            android:textStyle="bold" />
    </FrameLayout>
</LinearLayout>